--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "husky": {
+      "hooks": {
+        "pre-commit": "npm run lint"
+      }
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.1",
@@ -20,6 +25,7 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "husky": "^4.2.3",
     "moment": "^2.24.0",
     "pug-cli": "^1.0.0-alpha6",
     "rxjs": "~6.5.4",
