--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "e2e": "ng e2e"
   },
   "husky": {
-      "hooks": {
-        "pre-commit": "npm run lint"
-      }
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "private": true,
   "dependencies": {
@@ -25,6 +25,11 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "@fullcalendar/angular": "^4.4.5-beta",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
+    "@fullcalendar/interaction": "^4.4.0",
+    "@fullcalendar/timegrid": "^4.4.0",
     "husky": "^4.2.3",
     "moment": "^2.24.0",
     "pug-cli": "^1.0.0-alpha6",
